--- a/test.html
+++ b/test.html
@@ -22,7 +22,7 @@
 
     <section class="store-profile">
         <div class="product-image">
-            <img src="umg/gojo.jpg" alt="Product Image">
+            <img src="umg/goo.jpg" alt="Product Image">
         </div>
         <div class="product-description">
             <h2>Deskripsi Produk</h2>
