--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <h1>E-Commerce Store</h1>
+            <h1>E-Commer dawdadwadce Store</h1>
         </div>
         <nav>
             <ul>
