--- a/test.html
+++ b/test.html
@@ -25,7 +25,7 @@
             <img src="umg/goo.jpg" alt="Product Image">
         </div>
         <div class="product-description">
-            <h2>Deskripsi Produk kami</h2>
+            <h2>Deskripsi Produk kamiiiiii</h2>
             <p>Deskripsi produk yang menjelaskan keunggulan dan fitur-fitur produk Anda.</p>
         </div>
     </section>
