--- a/index.html
+++ b/index.html
@@ -21,17 +21,21 @@
     </header>
 
     <section class="store-profile">
-        <div class="product-image">
-            <img src="img/Produk1.png" alt="Product Image">
+        <div class="top-product">
+            <img src="img/Produk1.png" style="width: auto; height: 450px;" alt="Product Image">
+            <div class="top-product-name">
+            <h2>Nama Produk</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dictum tellus vel nulla porttitor varius. Pellentesque vel commodo turpis. Duis fringilla ac nibh sed imperdiet. Aliquam cursus eros in facilisis malesuada. Nam ut eros urna.</p>
+            </div>
         </div>
         <div class="product-description">
-            <h2>Deskripsi Produk kamiiiiii</h2>
+            <h2>Deskripsi Produk kami</h2>
             <p>Deskripsi produk yang menjelaskan keunggulan dan fitur-fitur produk Anda.</p>
         </div>
     </section>
 
     <section class="products">
-        <h2>Our Products</h2>
+        <h2>Produk Kami</h2>
         <div class="product-grid">
             <!-- Product items will be dynamically added here -->
         </div>
