--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
         </div>
         <div class="product-description">
             <h2>Deskripsi Produk kami</h2>
-            <p>Deskripsi produk yang menjelaskan keunggulan dan fitur-fitur produk Anda.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dictum tellus vel nulla porttitor varius. Pellentesque vel commodo turpis. Duis fringilla ac nibh sed imperdiet. Aliquam cursus eros in facilisis malesuada. Nam ut eros urna.</p>
         </div>
     </section>
 
     <section class="products">
         <h2>Produk Kami</h2>
+        <br>
         <div class="product-grid">
             <!-- Product items will be dynamically added here -->
         </div>
