add checkout menu

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Products</a></li>
-                <li><a href="#">Cart</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#" id="products-link">Products</a></li>
+                <li><a href="checkout.html">Cart</a></li>
             </ul>
         </nav>
     </header>
@@ -24,8 +24,8 @@
         <div class="top-product">
             <img src="img/Produk1.png" style="width: auto; height: 450px;" alt="Product Image">
             <div class="top-product-name">
-            <h2>Nama Produk</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dictum tellus vel nulla porttitor varius. Pellentesque vel commodo turpis. Duis fringilla ac nibh sed imperdiet. Aliquam cursus eros in facilisis malesuada. Nam ut eros urna.</p>
+                <h2>Nama Produk</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br> Ut dictum tellus vel nulla porttitor varius. Pellentesque vel commodo turpis. Duis fringilla ac nibh sed imperdiet.<br> Aliquam cursus eros in facilisis malesuada. Nam ut eros urna.</p>
             </div>
         </div>
         <div class="product-description">
@@ -47,7 +47,7 @@
         <ul id="cart-items">
             <!-- Cart items will be dynamically added here -->
         </ul>
-        <button onclick="checkout()">Checkout</button>
+        <a href="checkout.html">Checkout</a> <!-- Tautan menuju halaman checkout -->
     </section>
 
     <footer>
